# ailia-models-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test_all_samples.sh  xattr.sh
.github/workflows/: gcc.yml  msbuild.yml
audio_processing/clap/: CMakeLists.txt  clap.cpp  clap_utils.cpp
audio_processing/gpt-sovits/: CMakeLists.txt  gpt-sovits.cpp
audio_processing/gpt-sovits-v2-pro/: CMakeLists.txt  gpt-sovits-v2-pro.bat  gpt-sovits-v2-pro.cpp  gpt-sovits-v2-pro.sh
audio_processing/silero-vad/: CMakeLists.txt  silero-vad.cpp  silero-vad.sh
audio_processing/whisper/: CMakeLists.txt  whisper.cpp
background_removal/u2net/: CMakeLists.txt  README.md  u2net.cpp  u2net.sh  u2net_utils.cpp
face_detection/blazeface/: blazeface_utils.cpp
face_detection/retinaface/: CMakeLists.txt  retinaface.cpp
face_detection/yolov3-face/: CMakeLists.txt  yolov3-face.cpp  yolov3-face.sh
face_identification/arcface/: CMakeLists.txt  arcface.cpp  arcface.sh
face_recognition/face_alignment/: CMakeLists.txt  face_alignment.cpp  face_alignment.sh
face_recognition/mediapipe_iris/: CMakeLists.txt  mediapipe_iris.cpp  mediapipe_iris.sh
image_classification/clip/: CMakeLists.txt  clip.cpp
large_language_model/gemma4/: CMakeLists.txt  gemma4-multimodal.bat  gemma4-multimodal.cpp  gemma4.bat  gemma4.cpp
object_detection/yolox_tflite/: CMakeLists.txt  ailia_tflite.h  yolox_tflite.bat  yolox_tflite.cpp  yolox_tflite.sh
util/: ailia_voice_util.h  detector_utils.cpp  mat_utils.cpp  remove_quarantine.sh  wave_writer.cpp  webcamera_utils.cpp
(+70 files in other folders)
